<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/connectivity_layout" android:focusable="true" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/enableWifi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enable_wifi"/>
            <Button android:id="@+id/disableWifi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disable_wifi"/>
        </LinearLayout>
        <View android:background="#ffffffff" android:layout_width="match_parent" android:layout_height="3dp"/>
        <LinearLayout android:orientation="horizontal" android:paddingTop="4dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/startDelayedCycle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_toggling"/>
            <Button android:id="@+id/stopDelayedCycle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop_toggling"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_on_duration"/>
            <EditText android:id="@+id/dc_wifi_on_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minEms="15"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_off_duration"/>
            <EditText android:id="@+id/dc_wifi_off_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minEms="15"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_cycles_done"/>
            <TextView android:id="@+id/dc_wifi_cycles_done" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minEms="15"/>
        </LinearLayout>
        <View android:background="#ffffffff" android:layout_width="match_parent" android:layout_height="3dp"/>
        <LinearLayout android:orientation="horizontal" android:paddingTop="4dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/startScreenCycle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_screen_toggling"/>
            <Button android:id="@+id/stopScreenCycle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop_screen_toggling"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_on_duration"/>
            <EditText android:id="@+id/sc_wifi_on_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minEms="15"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_off_duration"/>
            <EditText android:id="@+id/sc_wifi_off_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minEms="15"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_cycles_done"/>
            <TextView android:id="@+id/sc_wifi_cycles_done" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minEms="15"/>
        </LinearLayout>
        <View android:background="#ffffffff" android:layout_width="match_parent" android:layout_height="3dp"/>
        <LinearLayout android:orientation="horizontal" android:paddingTop="4dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/startScan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_scan"/>
            <CheckBox android:id="@+id/scanDisconnect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disconnect"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scan_cycles" android:inputType="number"/>
            <EditText android:id="@+id/sc_scan_cycles" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minEms="5"/>
            <TextView android:id="@+id/sc_scan_results" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.5sp"/>
        </LinearLayout>
        <View android:background="#ffffffff" android:layout_width="match_parent" android:layout_height="3dp"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/startTdls" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_tdls"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mac_tdls"/>
            <EditText android:id="@+id/sc_ip_mac" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minEms="10"/>
            <Button android:id="@+id/stopTdls" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop_tdls"/>
        </LinearLayout>
        <View android:background="#ffffffff" android:layout_width="match_parent" android:layout_height="3dp"/>
        <LinearLayout android:orientation="horizontal" android:paddingTop="4dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/start_mms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_mms"/>
            <Button android:id="@+id/stop_mms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop_mms"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/start_hipri" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_hipri"/>
            <Button android:id="@+id/stop_hipri" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop_hipri"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/crash" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/crash"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/add_default_route" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_default_route"/>
            <Button android:id="@+id/remove_default_route" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove_default_route"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/default_request" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_request"/>
            <Button android:id="@+id/default_socket" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_socket"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/bound_http_request" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bound_http_request"/>
            <Button android:id="@+id/bound_socket_request" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bound_socket_request"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/routed_http_request" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routed_http_request"/>
            <Button android:id="@+id/routed_socket_request" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routed_socket_request"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
